// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@Meta should add metadata for classes on GraphQLControllers 1`] = `
Object {
  "filters": Array [],
  "guards": Array [],
  "metaData": Object {
    "bar": "baz",
  },
  "methodName": "test",
}
`;

exports[`@Meta should add metadata for classes on GraphQLControllers 2`] = `
Object {
  "filters": Array [],
  "guards": Array [],
  "headers": Object {},
  "metaData": Object {
    "foo": "bar",
  },
}
`;
